Update to splash page and some code animation and image changes

--- a/development/webdev-advcourse/portfolio2/index.html
+++ b/development/webdev-advcourse/portfolio2/index.html
@@ -59,7 +59,8 @@
         </ul>
     </nav>
     <section id="home">
-        <h1 class="animated box">Luke Reynolds</h1><h1 class="animated box"> Portfolio.</h1>
+      <img class="codeScreen" src="images/LukeScreen1.JPG" alt="images">
+        <h1 class="animated box"> } else { excellent = "Hired"; }</h1><h1 class="animated box"> } else if (Portfolio) { </h1><h1 class="animated box"> if(Luke Reynolds === Front End Dev) {</h1>
     </section>
     <section id="about">
        <h1>Luke Reynolds a Full Stack Web Developer<br>
